feat(be): As a FE, I want to have endpoint to get list of Schedules
